# liblbfgs

./: .gitignore  CMakeLists.txt  COPYING  ChangeLog  Makefile.am  README  configure.ac  configure.in  lbfgs.sln
cmake/: Commands.cmake  Config.cmake.in  Subproject.cmake
doc/: doxyfile  footer.html  header.html
go/: README  cgo.h  lbfgs.go
gpu/: CMakeLists.txt  CMakeLists.txt~  Makefile.am~  dev_funcs.cu  example.cpp  example.cpp~  lbfgs.cu
gpu/include/: Utilities.cu  Utilities.cuh  dev_funcs.cuh  lbfgs.cuh
include/: lbfgs.h
lib/: Makefile.am  arithmetic_ansi.h  arithmetic_sse_double.h  arithmetic_sse_float.h  arithmetic_yeppp.h  lbfgs.c  lbfgs_unittests.cc  lib.vcproj  lib.vcxproj
sample/: Makefile.am  main.c  sample.c  sample.go  sample.vcproj
